@@ -1,0 +1,6 @@
+<?php
+/*
+ * @deprecated since 6.0
+ */
+require_once \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath('static_info_tables') . 'Classes/Utility/LocalizationUtility.php';
+?>
